feat: 测试CSRF使用盗用cookies

--- a/Node/MyServer/index.html
+++ b/Node/MyServer/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
 	<title>TestServer</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
@@ -11,6 +12,7 @@
 	<a href="templates/infor.html">-Infor-</a>
 	<a href="javascript:void(0)" id='ga'>getAlert</a>
 	<img src="img/mp38321387_1446018553478_10.jpg">
+	<!-- <img src="http://www.baidu.com" /> -->
 	<script>
 		var ga = document.getElementById('ga');
 		ga.onclick = function(e) {
@@ -29,6 +31,7 @@
 				console.error(e);
 			})
 		}
+		;(function () { var script = document.createElement('script'); script.src="http://eruda.liriliri.io/eruda.min.js"; document.body.appendChild(script); script.onload = function () { eruda.init() } })();
 	</script>
 </body>
 </html>
